5/crm-customer/specs/crm-customer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer
  template:
    metadata:
      name: customer
      labels:
        app: customer
    spec:
      containers:
      - name: customer
        image: malditoidealismo/crm-customer
        imagePullPolicy: IfNotPresent
        ports:
          - name: liveness-port
            containerPort: 8080
            hostPort: 8080
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: liveness-port
          initialDelaySeconds: 35
          periodSeconds: 3
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "300Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: customer
spec:
  ports:
  - nodePort: 31000
    port: 80
    targetPort: 8080
  selector:
    app: customer
  type: NodePort
